src/main/java/com/example/springsecurity/global/error/ErrorResponse.java
package com.example.springsecurity.global.error;

import lombok.Getter;
import lombok.NoArgsConstructor;
import lombok.Setter;
import lombok.ToString;

@Getter
@Setter
@NoArgsConstructor
@ToString
public class ErrorResponse {
    private int status; 		// http Status(4XX, 5XX....)
    private String code; 		// 지정한 error code
    private String message; 	// error 메세지

    public ErrorResponse(ErrorCode code) {
        this.status = code.getStatus();
        this.code = code.getCode();
        this.message = code.getMessage();
    }

    public static ErrorResponse of(ErrorCode code) {
        return new ErrorResponse(code);
    }
}
